cursive-bootstrap/tests/ui/E-CON/E-CON-0412.cursive
// RUN: compile-fail
// DIAG: E-CON-0412
// SPEC: 8.9
// DESC: [[dynamic]] contract references mutable state

var global: i32 = 0

[[dynamic]]
procedure state_contract(x: i32) -> i32
    |= global > 0  //~ ERROR E-CON-0412: dynamic contract references mutable
{
    return x
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
